docs: add API doc with swagger
